--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 :root {
     --yellow: linear-gradient(180deg, #F8D49A -146.42%, #FAD79D -46.42%);
@@ -17,5 +18,5 @@
 
 body {
     margin: 0;
-    font-family: Poppins;
+    font-family: Raleway, Poppins;
 }
